crates/templates/tests/snapshots/check_dependencies__render-2.snap
---
source: crates/templates/tests/check_dependencies.rs
description: "Equivalent to @dep git Install with: \\e[32mgem install $dependency\\e[0m\\n"
expression: output
---
  dependency="git"
  if ! command -v $dependency >/dev/null 2>&1; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing dependency: " "$dependency" >&2
    printf "Install with: \e[32mgem install $dependency\e[0m\n\n" >&2
    exit 1
  fi
